# Containify

./: README.md  pyproject.toml
containify/: cli.py  fileserver.py  resources.py  settings.py  utils.py
containify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
containify/backends/: __init__.py  docker_backend.py  local.py
