[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "containify"
version = "0.1.1"
description = "Create isolated, folder-backed Python environments with optional Docker resource limits"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Containify Authors" }]
license = { text = "MIT" }
keywords = ["containers", "docker", "virtualenv", "cli", "resource-limits"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "psutil>=5.9.8",
    "docker>=7.0.0",
    "pyftpdlib>=1.5.9",
    "questionary>=2.0.1",
    "pyfiglet>=0.8.post1",
]

[project.urls]
Homepage = "https://example.com/containify"

[project.scripts]
containify = "containify.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["containify*"]
